--- a/.github/workflows/update-readme.yml
+++ b/.github/workflows/update-readme.yml
@@ -25,7 +25,7 @@ jobs: # 실제 실행될 내용
         python update.py
     - name: Commit changes # 3) 추가된 파일 commit
       run: |
-        git config --global user.name 'zetgi7dk5359' # 유저명
+        git config --global user.name 'kim-do-kyun' # 유저명
         git config --global user.email 'zetgi7dk5359@gmail.com' # 유저 이메일
         git add -A
         git commit -am "auto update README.md" # 커밋 메시지
